# toast

./: Cargo.toml  README.md  package.json
fedimint-plugin/: Cargo.toml
fedimint-plugin/src/: lib.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml  roastr.toml
src-tauri/src/: main.rs
src/components/: Greet.vue
tauri-plugin-roastr/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-roastr/examples/tauri-app/: package.json
tauri-plugin-roastr/examples/tauri-app/src/: App.svelte
tauri-plugin-roastr/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-roastr/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-roastr/guest-js/: index.ts
tauri-plugin-roastr/permissions/: default.toml
tauri-plugin-roastr/permissions/autogenerated/: reference.md
tauri-plugin-roastr/permissions/autogenerated/commands/: join_federation_as_admin.toml
tauri-plugin-roastr/permissions/schemas/: schema.json
tauri-plugin-roastr/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
