[package]
name = "tauri-plugin-roastr"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-roastr"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
directories = "5.0"
fedimint-core = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-logging = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fedimint-rocksdb = { git = "https://github.com/m1sterc001guy/fedimint", rev = "2541b9705aefde724d55683aa46fb6997d312d7e" }
fs-lock = "0.1.3"
roastr-client = { path = "../../roastr/roastr-client"}
tauri = { version = "2.0.0-beta.18" }
tokio = { version = "1", features = ["full",  "tracing"] }
tracing = "0.1.40"
serde = "1.0"
serde_json = { version = "1.0.114", features = ["preserve_order"] }
thiserror = "1.0"

[build-dependencies]
fedimint-build = "=0.3.1"
tauri-plugin = { version = "2.0.0-beta.14", features = ["build"] }
